# gnssTesting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
gnss_framework/: __init__.py
gnss_framework/protocols/: __init__.py  nmea.py  serial_mock.py  tcp_mock.py
gnss_framework/receivers/: __init__.py  base_receiver.py  serial_receiver.py  tcp_receiver.py
gnss_framework/reporting/: __init__.py  html_reporter.py  json_reporter.py  models.py
tests/: conftest.py  test_nmea_parsing.py  test_position_accuracy.py  test_reporting.py  test_serial_comm.py  test_tcp_comm.py
tools/: ai_test_advisor.py
