[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnss-test-framework"
version = "0.1.0"
description = "Automated regression test framework for GNSS receiver firmware validation"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
]
ai = [
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v --cov=gnss_framework --cov-report=term-missing"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnss_framework*"]

[tool.ruff]
line-length = 100
target-version = "py310"
